--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap");
 
 * {
   margin: 0;
@@ -11,3 +11,92 @@
   min-height: 100dvh;
   background: #ffffff;
 }
+
+/* contact sectio start */
+.contact {
+  width: 100%;
+  padding: 68px 250px;
+  background-image: url("./images/contactbg.png");
+  background-position: right center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.contact > h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 23px;
+  font-weight: 400;
+  line-height: 36px;
+  text-align: center;
+  color: #333333;
+  text-transform: uppercase;
+}
+
+.contact-container {
+  margin-top: 73px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.contact-container .contact-content {
+  width: 100%;
+  padding: 13px 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-container .contact-content > h3 {
+  margin-top: 26px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  color: #333333;
+  text-transform: uppercase;
+}
+
+.contact-container .contact-content > p {
+  margin-top: 20px;
+  font-family: "Vollkorn", sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
+  color: #212121;
+}
+
+.contact-container .contact-content > p > a {
+  text-decoration: none;
+  color: #212121;
+}
+
+.contact-container .contact-content ul {
+  margin-top: 20px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.contact-container .contact-content ul li a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  font-family: 'Vollkorn', sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #212121;
+  transition: all 0.3s ease;
+}
+
+.contact-container .contact-content ul li a:hover {
+  color: #000000;
+}
+
+/* contact sectio end */
